--- a/config/scaffolding/SiqaGitTes13maytProject.yml
+++ b/config/scaffolding/SiqaGitTes13maytProject.yml
@@ -7,18 +7,80 @@ packages:
   gitUrl: https://github.com/siqagituser/SiqaGitTes13maytProject
   gitUsername: siqagituser
   gitBranch: main
+- name: WmJDBCAdapter
+  wpmServer: https://packages.webmethods.io
+  wpmRegistry: softwareag
+services:
+- serviceName: project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections:DbNewAccount
+  packages:
+  - name: SiqaGitTes13maytProject
+    version: "1.0"
+- serviceName: project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.operations.actions:DBInsert
+  packages:
+  - name: SiqaGitTes13maytProject
+    version: "1.0"
+- serviceName: project.siqagittes13mayt.integrations:SIQAAdapterFlow
+  packages:
+  - name: SiqaGitTes13maytProject
+    version: "1.0"
 configurationVariables:
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionSettings.otherProperties
+  : loginTimeout=60;driverType=thin;
+  jdbc.jdbcTestPool.snoopparms: ddtdbg.ProtocolTraceEnable=true;ddtdbg.ProtocolTraceMaxline=16;ddtdbg.ProtocolTraceLocation=logs/snoop/jdbcTestPool.log;ddtdbg.ProtocolTraceShowTime=true
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionSettings.serverName
+  : vmiboint01
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionManagerSettings.startupRetryCount
+  : "0"
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionManagerSettings.poolIncrementSize
+  : "1"
+  jdbc.jdbcTestPool.maxConns: "10"
+  jdbc.jdbcTestPool.userid: root
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionSettings.datasourceClass
+  : com.wm.dd.jdbcx.sqlserver.SQLServerDataSource
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionManagerSettings.blockingTimeout
+  : "5000"
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionManagerSettings.poolable
+  : "false"
+  jdbc.jdbcTestPool.spyenabled: "false"
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionSettings.transactionType
+  : NO_TRANSACTION
+  jdbc.jdbcTestPool.snoopenabled: "false"
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionManagerSettings.startupBackoffSecs
+  : "10"
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionManagerSettings.expireTimeout
+  : "5000"
+  jdbc.jdbcTestPool.spyparms: SpyAttributes=(log=(file)logs/spy/jdbcTestPool.log;logTName=yes;timestamp=yes)
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionSettings.keyStore
+  : ""
   jdbc.jdbcTestPool.waitingThread: "0"
   jdbc.jdbcTestPool.minConns: "0"
   jdbc.jdbcTestPool.expireTime: "60000"
-  jdbc.jdbcTestPool.snoopparms: ddtdbg.ProtocolTraceEnable=true;ddtdbg.ProtocolTraceMaxline=16;ddtdbg.ProtocolTraceLocation=logs/snoop/jdbcTestPool.log;ddtdbg.ProtocolTraceShowTime=true
-  jdbc.jdbcTestPool.maxConns: "10"
-  jdbc.jdbcTestPool.userid: root
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionManagerSettings.minimumPoolSize
+  : "1"
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionSettings.portNumber
+  : "1433"
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionSettings.driverType
+  : Progress® DataDirect®
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionManagerSettings.heartBeatInterval
+  : "0"
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionSettings.trustStore
+  : ""
   jdbc.jdbcTestPool.driverAlias: MySQL Database Java Connector Driver
-  jdbc.jdbcTestPool.spyenabled: "false"
-  jdbc.jdbcTestPool.snoopenabled: "false"
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionEnabled
+  : "false"
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionSettings.networkProtocol
+  : tcp
   jdbc.jdbcTestPool.password: "{AES}er+I3U8nDVm8F4DBRST1+A=="
-  jdbc.jdbcTestPool.spyparms: SpyAttributes=(log=(file)logs/spy/jdbcTestPool.log;logTName=yes;timestamp=yes)
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionSettings.user
+  : sa
   jdbc.jdbcTestPool.dbURL: jdbc:mysql://mysql.test.local:3306/webm
   jdbc.jdbcTestPool.poolThreshold: "0"
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionSettings.dbType
+  : MSSQL
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionSettings.password
+  : "{AES}B2Xqma4Ost5nVUiXctJydQ=="
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionManagerSettings.maximumPoolSize
+  : "20"
+  ? artConnection.SiqaGitTes13maytProject.project.siqagittes13mayt.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.DbNewAccount.connectionSettings.databaseName
+  : SIQACloud
   jdbc.jdbcTestPool.useSSL: "false"
